_scss/templates/_home-hero.scss
.home_wrapper {
  display: block;
  margin: 100px auto 0;
  width: 100%;

  @include mq($from: tablet) {
    margin: 120px auto 0;
  }
  @include mq($from: desktop) {
    margin: 160px auto 0;
  }
}

.home_hero {
  display: block;
  width: 100%;
  margin: 0 0 25px;

  @include mq($from: tablet) {
    margin: 0 0 50px;
  }

  .hero_image {
    position: relative;
    width: 100%;
    hight: auto;

    .hero_contents {
      position: absolute;
      top: 50%;
      left: 100px;
      bottom: 0;
      right: 0;
    }

    .hero_title,
    .hero_subtitle,
    .home_text {
      display: block;
      line-height: 1;
      font-family: $BASE-FONT;
      font-weight: 600;
      font-size: 38px;
      color: $DETAIL-CYAN;
    }
    .hero_title {
      font-weight: 900;
    }
    .hero_subtitle {
      color: $WHITE;
    }
    .hero_text {
      margin-top: 50px;
      font-size: 20px;
      color: $WHITE;
    }
    .hero_arrow {
      display: block;
      margin-top: 1rem;
      width: 30px;
      height: auto;
      cursor: pointer;
    }

    /* Other aspect ratios to try:
     * 56.25% = 16:9
     * 75% = 4:3
     * 66.66% = 3:2
     * 62.5% = 8:5
     */
    &:after {
      display:block;
      content:"";
      padding-top: 45%;
      background: transparent url('../imgs/hero_image.jpg') no-repeat center;
      background-size: cover;
    }
  }

  .hero_expanded {
    display: block;
    margin: 0 auto;
    padding: 50px 0 0;
    text-align: center;
    width: 100%;
    @include clearfix();

    .wand {
      display: inline-block;
      vertical-align: top;
      margin-right: 50px;
      margin-bottom: 50px;
      width: 80px;
    }
    .text {
      display: inline-block;
      vertical-align: top;
      width: auto;
      max-width: 900px;
      font-size: 18px;
      line-height: 1.5;
      text-align: left;

      @include mq($from: tablet) {
        font-size: 20px;
      }

      @include mq($from: desktop) {
        font-size: 24px;
      }

      p {
        margin-bottom: 1.5rem;
      }
      p:first-child {
        font-weight: 900;
      }
    }
  }
}

